This this the changelog file for the Pothos GUI toolkit.

Release 0.4.3 (2016-11-26)
==========================

- Fix block tree invalid item drag with older selection
- Fix GraphBlock isPointing when called before update
- Reduce string copying when converting to QByteArray
- Tweak connection name for signal to regular input port

Release 0.4.2 (2016-11-26)
==========================

- Fix affinity zone name changes from using itemText()
- Fixed copy-paste typo for registering the DTypeChooser
- Set POTHOS_SYSLOG_ADDR - optional when its supported
- LoggerDisplay format changes for multi-line messages
- Added missing gif images to Qt resource bundling system
- Keyboard shortcut F6 for activate, F8 for plugin reload

Release 0.4.1 (2016-09-24)
==========================

- Additional error checking for topology file save and load
- Column sorting for signal+slots connection properties panel
- Replace icon installation with Qt resource bundling system
- Support commitRequested() return hotkey in ComboBox edit widget

Release 0.4.0 (2016-08-02)
==========================

- Switch to .pothos file extension (.pth is still supported)
- PothosGui 0.4.0 depends on libPothos 0.4.0 API additions
- Added menu option to export design to JSON topology format
- Added ColorPicker edit widget for parameter color selection
- Integrate GraphWidget with optional save/restore state hooks
- Added plugin reload feature without closing/reopening the GUI
- Re-factor access between top level objects, cleanup indirection
- Added icons for every scale type for the freedesktop.org install
- Added editable dimension option to the DTypeChooser edit widget
- Support click, drag, and release connection creation mode
- Open the properties panel after making a signal/slots connection
- Implement block mouse tracking for dynamic port text rendering
- Configurable block render mode for displaying event ports inline
- Save state for debug graphics (connection points & bounding boxes)
